# wakunet-rating-service

./: Procfile  README.md  build  rating-service.cabal  rating-service.md
src/: API.hs  Config.hs  Gen.hs  Language.hs  Main.hs  Models.hs  RatingValue.hs  Samples.hs
src/Waku/Rating/: Database.hs  RatingValue.hs  Server.hs
