name:                rating-service
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              1225449
maintainer:          e1225449@student.tuwien.ac.at
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable wakunet-rating-service
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base
    , servant 
    , servant-server 
    , servant-docs
    , servant-client
    , servant-jquery
    , persistent
    , persistent-postgresql
    , persistent-template
    , persistent-sqlite
    , wai
    , wai-extra
    , wai-cors
    , warp
    , aeson
    , mtl
    , either 
    , monad-logger
    , time
    , text
    , containers
    , transformers
    , bytestring
    , heroku
    , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
